--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					scientific vision can make to human peace and progress
 				</p>
 
-				<figure id="img-div">
+				<figure id="img-div" class="row">
 					<div class="column">
 						<img id="image" src="images/norman.jpg" alt="norman photo" />
 						<img id="image2" src="images/norman2.jpg" alt="norman photo" />
